[gd_scene load_steps=40 format=2]

[ext_resource path="res://my game assests/enemy/Raider_2/Idle.png" type="Texture" id=1]
[ext_resource path="res://my game assests/enemy/Raider_2/Walk.png" type="Texture" id=2]
[ext_resource path="res://enemy_city.gd" type="Script" id=3]
[ext_resource path="res://my game assests/enemy/Raider_2/Dead.png" type="Texture" id=4]
[ext_resource path="res://my game assests/enemy/Raider_2/Hurt.png" type="Texture" id=5]
[ext_resource path="res://my game assests/enemy/Raider_2/Shot_2.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 7.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), null ],
"loop": false,
"name": "death",
"speed": 12.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "shoot",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=17]
radius = 12.0
height = 34.0

[sub_resource type="CapsuleShape2D" id=18]
radius = 13.0
height = 34.0

[sub_resource type="BitmapFont" id=30]

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.247059, 0.980392, 0.0117647, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=32]
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="enemy_city" type="KinematicBody2D"]
position = Vector2( 0, -1 )
collision_layer = 8
collision_mask = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.5, -27.75 )
scale = Vector2( 1, 0.878906 )
frames = SubResource( 16 )
animation = "shoot"
playing = true

[node name="DeathTimer" type="Timer" parent="AnimatedSprite"]
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 17 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
modulate = Color( 0.945098, 0.0470588, 0.0470588, 1 )
shape = SubResource( 18 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -18.0
margin_top = -37.0
margin_right = 18.0
margin_bottom = -34.0
custom_fonts/font = SubResource( 30 )
custom_styles/fg = SubResource( 31 )
custom_styles/bg = SubResource( 32 )
max_value = 5.0
step = 1.0
value = 5.0
rounded = true
percent_visible = false

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 41, -16 )

[node name="ShooterTimer" type="Timer" parent="."]
wait_time = 1.7
autostart = true

[connection signal="timeout" from="AnimatedSprite/DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="ShooterTimer" to="." method="_on_ShooterTimer_timeout"]
